# hashman-rs

./: .gitignore  Cargo.toml  README.md  config-linux.json  config.json
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: config.rs  gaming.rs  gpu.rs  lib.rs  main.rs  mining.rs  rig.rs  sys.rs  test.rs
src/python/: get_gpu_util.py
